# first-rust-competition

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  makefile  publish.sh  rust-toolchain.toml
.cargo/: config.toml
.ci/: authorized.sh  pull-request.sh
.github/workflows/: ci.yaml  ci.yml  docker.yml  publish.yml
HAL/: MAKEFILE  makefile
cargo-frc/: .gitignore  Cargo.toml  README.md  cargo-frc-test  cargo-frc.mk  makefile
cargo-frc/src/: build.rs  config.rs  deploy.rs  init.rs  main.rs  toolchain.rs  util.rs
crates/cargo-frc/: Cargo.toml
crates/cargo-frc/src/: config.rs  deploy.rs  main.rs
crates/hal-gen/: Cargo.toml  hal-gen.mk
crates/wpilib/: Cargo.toml  build.rs
crates/wpilib-halgen/: Cargo.toml
crates/wpilib-halgen/src/: main.rs
crates/wpilib-sys/: .gitignore  Cargo.toml  build.rs
crates/wpilib-sys/src/: bindings.rs  hal_call.rs
crates/wpilib/.cargo/: config
crates/wpilib/src/: analog_input.rs  can.rs  dio.rs  ds.rs  encoder.rs  fpga.rs  hal.rs  i2c.rs  iterative_robot.rs  lib.rs  notifier.rs  observe.rs  pneumatics.rs  pwm.rs  relay.rs  robot.rs  serial.rs  spi.rs
crates/wpilib/src/hal/: error.rs
crates/wpilib/src/robot/: error.rs
examples/: Cargo.toml  README.md  digital_out.rs  pdp.rs  pneumatics.rs  wpilib-examples.mk
examples/basic/: Cargo.toml
examples/basic/.cargo/: config.toml
examples/basic/src/: main.rs
examples/iterative/: Cargo.toml
examples/iterative/src/: main.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
hal-gen/: makefile
hal-gen/src/: main.rs
lib/wpilib/: Cargo.toml  README.md
lib/wpilib-sys/: HAL_Wrapper.h  load-gcc-arm-headers.py
lib/wpilib/src/: analog_input.rs  serial.rs
lib/wpilib/src/ds/: hid.rs
nix/: repl.nix
nix/pkgs/: wpilib-toolchain-old.nix  wpilib-toolchain.nix
src/: .gitignore  lib.rs
src/hal/: hal_call.rs  mod.rs  sensor_base.rs  usage.rs
src/wpilib/: digital_out.rs  ds.rs  joystick.rs  mod.rs  robot_base.rs  robot_controller.rs  time.rs
wpilib/: .gitignore  Cargo.toml  README.md  build.rs  makefile  wpilib.mk
wpilib-examples/: Cargo.toml  custom_usage.rs  digital_out.rs  makefile  pdp.rs  pneumatics.rs  timed_robot.rs
wpilib-examples/.cargo/: config
wpilib-halgen/src/: main.rs
wpilib-sys/: .gitignore  Cargo.toml  HAL_Wrapper.h  build.rs  load-gcc-arm-headers.py  makefile  wpilib-sys.mk
wpilib-sys/include/: .gitignore
wpilib-sys/lib/: .gitignore
wpilib-sys/src/: bindings.rs  hal_call.rs  lib.rs  usage.rs
wpilib-sys/src/usage/: mod.rs
wpilib/.cargo/: config
wpilib/HAL/: WPILIB_LICENSE  load-gcc-arm-headers.py  makefile
wpilib/src/: analog_input.rs  can.rs  dio.rs  ds.rs  encoder.rs  gyro.rs  i2c.rs  joystick.rs  lib.rs  notifier.rs  observe.rs  pdp.rs  pneumatics.rs  pwm.rs  relay.rs  robot.rs  robot_base.rs  sensor_util.rs  serial.rs  spi.rs  time.rs
wpilib/src/ds/: hid.rs
wpilib/src/hal/: bindings.rs  hal.rs  hal_call.rs  mod.rs  sensor_base.rs  usage.rs
wpilib/src/wpilib/: analog_input.rs  digital_out.rs  dio.rs  ds.rs  joystick.rs  mod.rs  pdp.rs  pneumatics.rs  robot_base.rs  robot_controller.rs  sensor_util.rs  serial.rs  spi.rs  time.rs
xtask/: Cargo.toml
xtask/src/: clean.rs  init.rs  main.rs
