# This file is part of "first-rust-competition", which is free software: you
# can redistribute it and/or modify it under the terms of the GNU General
# Public License version 3 as published by the Free Software Foundation. See
# <https://www.gnu.org/licenses/> for a copy.

[package]
name = "cargo-frc"
version = "0.2.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
description = "A cargo extension for deploying rust code to FRC robots."
# documentation = "..."
# homepage = "..."
repository = "https://github.com/Lytigas/first-rust-competition"
readme = "./README.md"
keywords = ["frc", "RoboRIO"]
categories = ["development-tools::cargo-plugins", "embedded", "command-line-interface"]
license = "GPL-3.0"

[[bin]]
name = "cargo-frc"


[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.31.2"
subprocess = "0.1.13"
log = "0.4.1"
fern = { version = "0.5", features = ["colored"] }
pretty_env_logger = "0.2"
tempfile = "3.0.2"
ref_slice = "1.1.1"

# Example config
[package.metadata.frc]
team-number = 114
rio-address = "10.1.14.2"
target-dir = "../target"
executable-name = "digital_out"
