# Copyright 2018 First Rust Competition Developers.
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "cargo-frc"
version = "0.2.3"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
description = "A cargo extension for deploying rust code to FRC robots."
# documentation = "..."
# homepage = "..."
repository = "https://github.com/Lytigas/first-rust-competition"
readme = "./README.md"
keywords = ["frc", "roborio", "robotics", "first"]
categories = ["development-tools::cargo-plugins", "embedded", "command-line-interface"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-frc"


[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.31.2"
subprocess = "0.1.13"
log = "0.4.1"
fern = { version = "0.5", features = ["colored"] }
pretty_env_logger = "0.2"
tempfile = "3.0.2"
ref_slice = "1.1.1"

# Example config
[package.metadata.frc]
team-number = 114
rio-address = "10.1.14.2"
target-dir = "../target"
