[package]
name = "wpilib-examples"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
publish = false

[dependencies]
wpilib = {path = "../wpilib"}
# wpilib = { git = "https://github.com/Lytigas/first-rust-competition/", branch = "testing" }

[package.metadata.frc]
team-number = 114
# rio-address = "10.1.14.2"
target-dir = "../target" 
executable-name = "digital_out"

[[bin]]
name = "digital_out"
path = "./digital_out.rs"

[[bin]]
name = "pdp"
path = "./pdp.rs"

[[bin]]
name = "pneumatics"
path = "./pneumatics.rs"
