# This file is part of "first-rust-competition", which is free software: you
# can redistribute it and/or modify it under the terms of the GNU General
# Public License version 3 as published by the Free Software Foundation. See
# <https://www.gnu.org/licenses/> for a copy.

[package]
name = "wpilib-examples"
version = "0.0.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
publish = false

[dependencies]
wpilib = {path = "../wpilib"}
wpilib-sys = {path = "../wpilib-sys"}

[package.metadata.frc]
team-number = 114
# rio-address = "10.1.14.2"
target-dir = "../target"
executable-name = "pneumatics"

[[bin]]
name = "custom_usage"
path = "./custom_usage.rs"

[[bin]]
name = "digital_out"
path = "./digital_out.rs"

[[bin]]
name = "pdp"
path = "./pdp.rs"

[[bin]]
name = "pneumatics"
path = "./pneumatics.rs"
