# Copyright 2018 First Rust Competition Developers.
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "wpilib"
version = "0.2.2"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
description = "FRC's WPILib written in Rust."
repository = "https://github.com/Lytigas/first-rust-competition"
readme = "./README.md"
keywords = ["frc", "roborio", "robotics", "first"]
categories = ["embedded", "hardware-support"]
license = "MIT OR Apache-2.0"

exclude = [".cargo", "./**/makefile"]

[lib]
name = "wpilib"
path = "src/lib.rs"
# Tests can only be run on ARM
test = false

[features]
dev = []

[dependencies]
lazy_static = "1.1.0"
wpilib-sys = {path = "../wpilib-sys", version = "0.2.2"}

[build-dependencies]
bindgen = "0.37.4"
