# Copyright 2018 First Rust Competition Developers.
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "hal-gen"
version = "0.0.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bindgen = "0.43.1"
