# Copyright 2018 First Rust Competition Developers.
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "wpilib-sys"
version = "0.4.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
build = "build.rs"
links = "wpiHal"
description = "FRC's WPILib system bindings for rust."
repository = "https://github.com/Lytigas/first-rust-competition"
keywords = ["frc", "roborio", "robotics", "first", "wpilib"]
categories = ["embedded", "hardware-support", "external-ffi-bindings"]
license = "MIT OR Apache-2.0"
edition = "2018"

include = [
    "src/**/*",
    "Cargo.toml",
    "build.rs",
    "WPILIB_LICENSE",
    "lib/**/*",]

[features]
dev = []
