[package]
name = "wpilib-sys"
version = "0.4.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
build = "build.rs"
links = "wpiHal"
description = "FRC's WPILib system bindings for rust."
repository = "https://github.com/Lytigas/first-rust-competition"
keywords = ["frc", "roborio", "robotics", "first", "wpilib"]
categories = ["embedded", "hardware-support", "external-ffi-bindings"]
license = "MIT OR Apache-2.0"
edition = "2018"

include = [
    "src/**/*",
    "Cargo.toml",
    "build.rs",
    "WPILIB_LICENSE",
    "lib/**/*",]

[dependencies]
tracing = { version = "0.1.*", optional = true }

[features]
tracing = [ "dep:tracing" ]
