# Copyright 2018 First Rust Competition Developers.
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "wpilib"
version = "0.4.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
description = "FRC's WPILib written in Rust."
repository = "https://github.com/Lytigas/first-rust-competition"
readme = "./README.md"
keywords = ["frc", "roborio", "robotics", "first"]
categories = ["embedded", "hardware-support"]
license = "MIT OR Apache-2.0"
edition = "2018"

exclude = [".cargo", "./**/makefile"]

[lib]
name = "wpilib"
path = "src/lib.rs"

[dependencies]
wpilib-sys = {path = "../wpilib-sys", version = "0.4.0"}
thiserror = "1.0.31"

[package.metadata.nix]
build = true
