[package]
name = "wpilib"
version = "0.4.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
description = "FRC's WPILib written in Rust."
repository = "https://github.com/Lytigas/first-rust-competition"
readme = "./README.md"
keywords = ["frc", "roborio", "robotics", "first"]
categories = ["embedded", "hardware-support"]
license = "MIT OR Apache-2.0"
edition = "2018"

exclude = [".cargo", "./**/makefile"]

[lib]
name = "wpilib"
path = "src/lib.rs"

[dependencies]
wpilib-sys = { path = "../wpilib-sys", version = "0.4.0" }
thiserror = "1.0.31"
lazy_static = "1.4.0"
embedded-hal = { version = "0.2.3", optional = true }
tracing = { version = "0.1.*", optional = true }

[features]
tracing = [ "wpilib-sys/tracing", "dep:tracing" ]

[package.metadata.nix]
build = true
