[package]
name = "basic"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wpilib = { path = "../../crates/wpilib" }

[package.metadata.frc]
target-dir = "../../target"
team-number = 0
