[package]
name = "tracing"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.11"
wpilib = { path = "../../crates/wpilib", features = [ "tracing" ] }

[package.metadata.frc]
target-dir = "../../target"
team-number = 0
